--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import "bug/bug.scss";
 @import "lk/lk.scss";
 @import "order/order.scss";
+@import "page/page.scss";
 @import "footer/footer.scss";
 @import "modal/modal.scss";
 @import "constant/constant.scss";
