--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -119,7 +119,7 @@
     .item_wrap {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-gap: 50px 20px;
+        grid-gap:  20px;
         @media (max-width: 320px) {
             grid-template-columns: 1fr;
             grid-gap: 20px;
@@ -208,6 +208,12 @@
             margin-bottom: 10px;
             display: block;
             font: 1.05rem "800";
+            span {
+                text-decoration: line-through;
+                font: .87rem "600";
+                margin-left: 5px;
+                color: #929292;
+            }
         }
         .choice_color {
             margin-bottom: 15px;
