--- a/scss/bug/bug.scss
+++ b/scss/bug/bug.scss
@@ -75,6 +75,7 @@
                 color: #929292;
                 font: .75rem "400";
             }
+
             .bug_price {
                 margin-top: 15px;
                 color: #000;
@@ -236,6 +237,9 @@
                 margin-bottom: 5px;
                 color: #929292;
                 font: .75rem "400";
+                span {
+                    margin-left: 8px;
+                }
                 img {
                     margin-left: 5px;
                     appearance: none;
@@ -372,9 +376,22 @@
                     grid-gap: 10px;
                     grid-template-columns: 110px 1fr;
                 }
+                .select_box {
+                    &::after {
+                        top: 10px;
+                        right: 9px;
+                        content: '';
+                        background: url(../img/arr.svg);
+                        background-size: 6px 6px;
+                        height: 6px;
+                        width: 6px;
+                        display: block;
+                    }
+                }
                 select {
-                    font: .75rem "800";
-                    padding: 3px 10px;
+                    width: 100%;
+                    font: .8rem "800";
+                    padding: 5px 10px;
                     background: #fff;
                     border: none;
                     outline: none;
@@ -427,12 +444,12 @@
                     align-items: center;
                     justify-content: center;
                     select {
-                        width: 30px;
+                        width: 35px;
                         text-align: center;
                         font: .87rem "600";
                         height: 100%;
                         position: relative;
-                        left: 3px;
+                        left: -8px;
                         text-align: center;
                         border: none;
                         background: transparent;
@@ -444,7 +461,7 @@
                     }
                     svg {
                         position: absolute;
-                        right: 8px;
+                        right: 5px;
                         pointer-events: none;
                     }
                 }
@@ -556,6 +573,11 @@
         grid-template-columns: 1fr;
         grid-gap: 8px;
         margin-bottom: 30px;
+        .select_box {
+            &::after {
+                top: 10px;
+            }
+        }
         select {
             color: #000;
             padding: 10px;
@@ -754,4 +776,52 @@
         text-decoration: underline;
         color: #000;
     }
+}
+
+.modal_btn_wrap {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    transition: .3s;
+    transform: translateY(130%);
+    width: 100%;
+    box-sizing: border-box;
+    background: #FFF;
+    border-radius: 15px 15px 0px 0px;
+    padding: 30px;
+    .modal_btn_bottom {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
+        a {
+            width: 100%;
+            box-sizing: border-box;
+            border: 1px solid #000000;
+            border-radius: 4px;
+            text-align: center;
+            color: #fff;
+            font: 1.25rem "800";
+            padding: 15px;
+            display: block;
+            background: #000;
+        }
+        a:last-child {
+            background: #fff;
+            color: #000;
+        }
+    }
+}
+
+.modal_btn_wrap_active {
+    transform: translateY(0);
+}
+
+.choince_size {
+    padding: 0 15px;
+    margin-bottom: 10px;
+    position: relative;
+    top: -5px;
+    font: 1rem "400";
 }
