--- a/scss/order/order.scss
+++ b/scss/order/order.scss
@@ -309,3 +309,24 @@
         margin-top: 35px;
     }
 }
+
+.call_btn_wrap {
+    margin: 0 auto;
+    display: block;
+    position: relative;
+    top: -5px;
+    &::after {
+        content: '';
+        width: 100%;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: -10px;
+        bottom: 0;
+        height: 30px;
+    }
+    img {
+        margin: 0 auto;
+        display: block;
+    }
+}
