--- a/scss/header/header.scss
+++ b/scss/header/header.scss
@@ -208,3 +208,10 @@ nav {
         appearance: none;
     }
 }
+
+.size_none {
+    p {
+        color: #9f5025;
+        font: 1rem "600";
+    }
+}
