--- a/css/main.css
+++ b/css/main.css
@@ -3505,11 +3505,10 @@ nav {
     margin: 5px 0;
     height: 30px; }
     .order_item_box .pay_wrap img {
-      margin-right: 5px;
+      margin-right: 10px;
+      max-height: 20px;
       -o-object-fit: cover;
          object-fit: cover; }
-    .order_item_box .pay_wrap .pay {
-      margin-left: 10px; }
   .order_item_box .card_text {
     font: .87rem "400"; }
     .order_item_box .card_text a {
@@ -5036,7 +5035,8 @@ footer {
   padding: 0 15px; }
   .footer_icon img {
     max-width: 100%;
-    max-height: 30px;
+    max-height: 20px;
+    margin: 0 5px;
     -o-object-fit: cover;
        object-fit: cover; }
 
