--- a/scss/footer/footer.scss
+++ b/scss/footer/footer.scss
@@ -208,7 +208,8 @@ footer {
     padding: 0 15px;
     img {
         max-width: 100%;
-        max-height: 30px;
+        max-height: 20px;
+        margin: 0 5px;
         object-fit: cover;
     }
 }
